RESOLVED FIXED211199
border-radius fails to clip iframe contents
https://bugs.webkit.org/show_bug.cgi?id=211199
Summary border-radius fails to clip iframe contents
Simon Fraser (smfr)
Reported 2020-04-29 12:43:48 PDT
border-radius fails to clip iframe contents
Attachments
Patch (16.51 KB, patch)
2020-04-29 12:51 PDT, Simon Fraser (smfr)
zalan: review+
Patch (16.52 KB, patch)
2020-04-29 16:01 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-04-29 12:51:35 PDT
Simon Fraser (smfr)
Comment 2 2020-04-29 12:51:38 PDT
Simon Fraser (smfr)
Comment 3 2020-04-29 16:01:16 PDT
Alexey Proskuryakov
Comment 4 2020-04-29 17:53:59 PDT
Is this related to bug 210666 or bug 159045 in any way?
Simon Fraser (smfr)
Comment 5 2020-04-29 19:43:00 PDT
It should fix both.
Simon Fraser (smfr)
Comment 6 2020-04-30 08:15:38 PDT
Simon Fraser (smfr)
Comment 7 2020-04-30 08:15:58 PDT
*** Bug 210666 has been marked as a duplicate of this bug. ***
Truitt Savell
Comment 9 2020-04-30 15:50:28 PDT
Tracking this new test failure in https://bugs.webkit.org/show_bug.cgi?id=211261
Note You need to log in before you can comment on or make changes to this bug.